--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
   <body>
     <!-- Agrega la clase banner al div -->
-    <div>
+    <div class="banner">
       <h1>Los lenguajes del navegador</h1>
       <h3>HTML, CSS y JavaScript</h3>
     </div>
 
     <!-- Agrega la clase html-exp al div -->
-    <div>
+    <div class="html-exp">
       <h2>¿Qué es HTML?</h2>
       <p>
         HTML significa HyperText Markup Language y se utiliza para crear la
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Agrega la clase css-exp al div -->
-    <div>
+    <div class="css-exp">
       <h2>¿Qué es CSS?</h2>
       <p>
         CSS es un lenguaje que los desarrolladores web utilizan para agregar
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Agrega la clase js-exp al div -->
-    <div>
+    <div class="js-exp">
       <h2>¿Qué es JavaScript?</h2>
       <p>
         JavaScript es un lenguaje de programación que se usa para crear
@@ -52,4 +52,5 @@
       </p>
     </div>
   </body>
+  
 </html>
